--- a/index.html
+++ b/index.html
@@ -16,28 +16,41 @@
     <style></style>
   </head>
   <body>
-    <main class="flex"></main>
-    <img src="images/drawers.jpg" alt="" />
-    <section class="right">
-      <h1>
-        Shift the overall look and feel by adding these wonderful touches to
-        furniture in your home
-      </h1>
-      <p class="bigger">
-        Ever been in a room and felt like something was missing? Perhaps it felt
-        slightly bare and uninviting. I’ve got some simple tips to help you make
-        any room feel complete.
-      </p>
-      <section class="flex">
-        <img src="images/avatar-michelle.jpg" alt="" />
-        <section class="column">
-          <h2>Michelle Appleton</h2>
-          <p class="smaller">28 Jun 2020 Share</p>
-        </section>
-        <img src="images/icon-share.svg" alt="" />
-      </section>
-    </section>
+    <main class="flex">
+      <img src="images/drawers.jpg" alt="" />
+      <section class="right">
+        <h1>
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+        <p class="bigger">
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I’ve got some simple tips to help
+          you make any room feel complete.
+        </p>
+        <section class="flex">
+          <img src="images/avatar-michelle.jpg" alt="avatar" class="avatar" />
+          <section class="column">
+            <h2>Michelle Appleton</h2>
+            <p class="smaller">28 Jun 2020 Share</p>
+          </section>
 
+          <section class="share-wrapper">
+            <section class="share_bubble bubble-bottom-center">
+              <p>SHARE</p>
+              <a href="#"><img src="images/icon-facebook.svg" alt="" /></a>
+              <a href="#"><img src="images/icon-twitter.svg" alt="" /></a>
+              <a href="#"><img src="images/icon-pinterest.svg" alt="" /></a>
+            </section>
+            <img
+              src="images/icon-share.svg"
+              alt="icon-share"
+              class="icon-share"
+            />
+          </section>
+        </section>
+      </section>
+    </main>
     <footer>
       <div class="attribution">
         Challenge by
@@ -46,5 +59,6 @@
         >. Coded by <a href="#">Your Name Here</a>.
       </div>
     </footer>
+    <script src="/script.js"></script>
   </body>
 </html>
