--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main class="flex">
-      <img src="images/drawers.jpg" alt="" />
+      <img src="images/drawers.jpg" alt="" class="photo_left" />
       <section class="right">
         <h1>
           Shift the overall look and feel by adding these wonderful touches to
